# ggnumlcash.cpp

./: README.md  convert_hf_to_gguf.py
.github/workflows/: codeql.yml
common/: arg.cpp  chat.cpp  common.cpp  common.h
docs/: QUICK_START.md  README.md  deployment-scaling.md  development-roadmap.md  financial-hardware-implementation.md  ggnucash-architecture.md  ops.md  project-tracking.md  security-compliance.md  system-components-api.md
docs/issues/: README.md  issue-001-financial-processing-core.md  issue-002-hardware-acceleration.md  issue-007-hft-engine.md
docs/ops/: MUSA.csv
examples/: CMakeLists.txt
examples/batched/: batched.cpp
examples/batched-bench/: batched-bench.cpp
examples/compare-mlx/: compare-mlx.sh
examples/cvector-generator/: cvector-generator.cpp
examples/embedding/: embedding.cpp
examples/financial-sim/: CMakeLists.txt  README.md  financial-sim.cpp  sample-coa.json  test-financial-logic.cpp
examples/gritlm/: gritlm.cpp
examples/imatrix/: imatrix.cpp
ggml/: CMakeLists.txt
ggml/include/: ggml.h  (+2 more)
include/: llama.h
scripts/: tool_bench.py
src/: llama-arch.cpp  llama-arch.h  llama-batch.cpp  llama-batch.h  llama-context.cpp  llama-context.h  llama-cparams.cpp  llama-cparams.h  llama-graph.cpp  llama-graph.h  llama-hparams.cpp  llama-hparams.h  llama-kv-cache-unified-iswa.cpp  llama-kv-cache-unified.cpp  llama-kv-cache-unified.h  llama-memory-hybrid.cpp  llama-memory-recurrent.cpp  llama-model.cpp  llama-model.h  llama-vocab.cpp  llama.cpp
tests/: CMakeLists.txt  test-backend-ops.cpp  test-model-random.cpp  test-opt.cpp
(+70 files in other folders)
